[tool.setuptools.packages.find]
where = ["."]
include = ["regtech", "projects"]


[project]
name = "regtech"
authors = [{name = "rhizomeai"}]
description = "regtech package for RAG over FDA data"
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["version"]

[tool.isort]
profile = "black"


[tool.importlinter]
root_packages = [
    "regtech",
    "projects",
]

[[tool.importlinter.contracts]]
name = "regtech cannot import projects"
type = "forbidden"
source_modules = [
    "regtech",
]
forbidden_modules = [
    "projects",
]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.in"] }


[tool.pyright]
root = ['.']
useLibraryCodeForTypes = true
typeCheckingMode = "basic"


[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`), sort imports ('I')
select = ["E4", "E7", "E9", "F", "I"]

[tool.pixi.project]
name = 'regtech'
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "linux-aarch64", "linux-64"]

[tool.pixi.dependencies]
python = "3.11.*"
pip = "*"
requests = "*"
numpy = "*"
pandas  = "*"
diskcache = "*"
openai = "*"
scikit-learn = "*"
tenacity = "*"
tiktoken = "*"
psycopg = "*"
python-dotenv = "*"
python-levenshtein = "*"
clize = "*"
llama-index = "*"
pypdf = "*"
fastapi = "*"
uvicorn = "*"
sse-starlette = "*"
pyjwt = "*"
cryptography = "*"
uvloop = "*"
sqlite = "==3.46.1" 

[tool.pixi.pypi-dependencies]
opencv-python-headless= "*"
crypto = "*"
cohere = "*"
psycopg_pool = "*"

[tool.pixi.feature.prod.dependencies]
uvloop = "*"

[tool.pixi.feature.dev.pypi-dependencies]
regtech = { path = ".", editable = true }
mapply = "*"
gsheets  = "*"

[tool.pixi.feature.dev.dependencies]
nbformat = "*"
ipywidgets  = "*"
streamlit = ">1.23.0"
beautifulsoup4 = "*"
plotly = "*"
markdown = "*"
pyright = "*"
seaborn = "*"
ipykernel = "*"
pytest = "*"
trio = "*"
pytest-asyncio = "*"
pytesseract = "*"
async-lru = "*"

[tool.pixi.environments]
# Default environment, has features for running in development, testing and building
default = { features = ["dev"], solve-group = "default" }
# Leaner environment for use in production
prod = { features = ["prod"], solve-group = "default" }
